# Enviame

./: .env  .env.example  Cargo.toml  Dockerfile  MIGRATION.md  README.md  askama.toml  build.rs  compose.yaml  schema.sql  update_enviame.sh.example
.cargo/: config.toml
.circleci/: config.yml
.github/workflows/: ci_beta.yml  ci_prod.yml  deploy.yml  deploy_main.yml  deploy_prod.yml  rust_clippy.yml  test_deploy.yml
.sqlx/: query-1a134f16e0b379998e026b3351ff2677fd506223ddc3b14a8d63809e45966fc5.json  query-1d73d578180cc9bfd6864c2d7166b4f39ffeee658cfb3d7ebea1cc9db9c8de10.json  query-214e42ae93cf302826589da40af97ae261b6e84b85472c84c9df5d9beaf69609.json  query-32be9226f2ee9d3e24418f7c6d76d80de68bc67bc7b91f4229716f3863750978.json  query-32cdc8002ac1d1b3cf4b3b56efe17beec434db44c559e2725ef5977bcadf8583.json  query-45a6f170d8e31485017143445a1049f05c1472e390addc51e847129c91a00f63.json  query-5c1168db5c834434793c5a028120685dff45a384b9444dba5d8865a9749b7a65.json  query-6422f755cc5fad5077418f20b52424a987026405e9d04057decf9ceca6644268.json  query-66d1fc51289394eadf10f2c58c3229ecd692783d23aaeff0340973d85312864c.json  query-7eb62d130982f47cd51eea44dffec573ea1976c7d6131ae56b89ae896fea7e16.json  query-81e6319a693a74f6aadb969f91d54b17d1b120f38276f461bb8bfd0f6523e3da.json  query-88740d8875eabc7d2ba6f96308ca9d69350ba84978f84841f8fb00689696bcd1.json  query-9048aeb50ea2c3e5dbff85b703defac51d28e093b1b944e8a1d9027a365e855d.json  query-926b4def74b21ab490f006df74e158e283ad8878d2dc544df6dadfe85559e112.json  query-aab848c0cea3734c4ca32086a86cf91685291277b1dcc0bc434a39bcbb655e7a.json  query-bc7c686f9adac55a531c3b0af2ee84996fc0016de32186648d01e65e51584845.json
assets/: site.webmanifest  sw.js  utils.js
assets/css/: styles.css
assets/js/: sw.js  utils.js
scripts/: schema.sql
src/: constants.rs  main.rs  state.rs  utils.rs  worker.rs
src/routes/: apply.rs  assets.rs  calendar.rs  form.rs  login.rs  message.rs  mod.rs  pages.rs  resend_link.rs  version.rs
src/workers/: calendar.rs  email.rs  mod.rs
static/: about.html  apply.html  index.html
static_src/: about.html  apply.html  base.html  email_base.html  email_link.html  email_notification.html  email_user.html  index.html  link.html
