[package]
name = "enviame"
version = "1.0.8"
edition = "2024"
license = "AGPL-3.0-only"
build = "build.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
lettre = { version = "0.11", features = ["smtp-transport", "tokio1-native-tls"] }
dotenvy = "0.15"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
axum_csrf = { version = "0.11", features = ["layer"] }
askama = "0.13"
anyhow = "1.0"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
once_cell = "1.21"
rust-embed = "8.7"
mime_guess = "2.0"
icalendar = { version = "0.16", features = ["chrono-tz"] }
chrono = "0.4"

[build-dependencies]
html-minifier = "5.0"

[profile.release-prod]
inherits = "release"
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
